@@ -1,3 +1,7 @@
+2015-04-08  Niibe Yutaka  <gniibe@fsij.org>
+
+	* board/board-maple-mini.h: New from Aidan Thornton.
+
 2015-03-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 0.04a.
